feat: add user related open api
