# spec/openapi.yaml
@@ -97,6 +97,60 @@ components:
           type: boolean
           description: Whether to enable or disable the ProxyNode
         # TODO Add more properties as needed
+    UserInfo:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: The unique identifier of the user.
+        username:
+          type: string
+          description: The username of the user.
+        balance:
+          type: number
+          format: float
+          description: The balance of the user.
+        level:
+          type: integer
+          format: int32
+          description: The level of the user.
+        level_expire_time:
+          type: string
+          format: date-time
+          description: The expiration time of the user's level.
+        upload_traffic:
+          type: integer
+          format: int64
+          description: The amount of upload traffic used by the user.
+        download_traffic:
+          type: integer
+          format: int64
+          description: The amount of download traffic used by the user.
+        total_traffic:
+          type: integer
+          format: int64
+          description: The total amount of traffic used by the user.
+        last_use_time:
+          type: string
+          format: date-time
+          description: The time when the user last used the service.
+    UserCheckinLog:
+      type: object
+      properties:
+        user_id:
+          type: integer
+          format: int64
+          description: The unique identifier of the user..
+        checkin_time:
+          type: string
+          format: date-time
+          description: The time when the user last used the service.
+        increased_traffic:
+          type: integer
+          format: int64
+          description: The amount of traffic increased by this checkin.
+
 security:
   - OpenApiKeyAuth: []
 
@@ -248,6 +302,59 @@ paths:
                 $ref: "#/components/schemas/CommonErrorResp"
         500:
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommonErrorResp"
+
+  /users/{id}/info/:
+    get:
+      summary: Get UserInfo
+      description: Get a userInfo by ID.
+      tags:
+        - User
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserInfo"
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CommonErrorResp"
+  /users/{id}/checkin/:
+    post:
+      summary: Checkin
+      description: Checkin by ID.
+      tags:
+        - User
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserCheckinLog"
+        400:
+          description: Bad request
           content:
             application/json:
               schema:
